fix(menubar): fix menus overflow hiding behind menubar

--- a/src/core/style/variables.scss
+++ b/src/core/style/variables.scss
@@ -79,7 +79,7 @@ $whiteframe-shadow-24dp: 0px 11px 15px -7px rgba(0, 0, 0, $shadow-key-umbra-opac
 
 $z-index-toast: 105 !default;
 $z-index-tooltip: 100 !default;
-$z-index-menu: 95 !default;
+$z-index-menu: 100 !default;
 $z-index-select: 90 !default;
 $z-index-dialog: 80 !default;
 $z-index-bottom-sheet: 70 !default;
